# Antrian-Poliklinik

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  generate_audio.py  start.sh
src/: main.rs
static/: app.js  control.html  control.js  index.html  style.css
